@@ -53,7 +53,7 @@ public RegRandNextCycle(String n) {
 /**
 * Calls super.clone().
 */
-protected Object clone() throws CloneNotSupportedException {
+public Object clone() throws CloneNotSupportedException {
 	
 	return super.clone();
 }
